# mlm

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mlflow/: Dockerfile
mlm_lib/: __init__.py  cost.py  results.py  runner.py  settings.py
mlm_lib/config/: cascade_models.yaml  make_config.py  prompts.py  settings.py
src/: pyproject.toml  requirements.in  requirements.txt
src/agents/: base.py  pydantic_agent.py
src/config/: cascade_models.yaml  make_config.py  prompts.py
src/datasets/: loader.py
src/evaluation/: arena_judger.py  arena_judger_simple.py  evaluate.py  evaluate_simple.py  judge.py  run_benchmark.py
src/models/: schemas.py
src/resources/: results.jsonl
src/scripts/: 01_run_baseline.py  02_run_simple.py  03_run_complex.py
src/tests/: test.py
