[project]
name = "Sigmoid_MLM_Project"
version = "0.1.0"
description = "Sigmoid MLM (Mixed Language Models) Project - Cascade of Models approach/architecture"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "hf-xet>=1.2.0",
    "json-repair>=0.57.1",
    "loguru>=0.7.3",
    "mlflow>=3.9.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.51.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
